# chess-coach-bodega-ben

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
chess_coach/: __init__.py  config.py  main.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  styles.css
scripts/: generate_static_dashboard.py
