[project]
name = "chess-coach-bodega-ben"
version = "0.1.0"
description = "Bodega Ben Chess.com analytics dashboard for coaching and self-review."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.27.0",
  "python-chess>=1.999",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
